REGRESSION(264618@main): Infinite mutual recursion in SVGRenderSupport::layoutDifferentRootIfNeeded https://bugs.webkit.org/show_bug.cgi?id=258171

Reviewed by Darin Adler.

Prevent infinite recursion in SVGRenderSupport::layoutDifferentRootIfNeeded by checking
whether the target root is already in layout or not. Also removed the now unused svgRoot argument
from layoutDifferentRootIfNeeded and renamed the function to layoutReferencedRootIfNeeded.

* LayoutTests/svg/markers/marker-clip-path-mutual-reference-crash-expected.txt: Added.
* LayoutTests/svg/markers/marker-clip-path-mutual-reference-crash.html: Added.
* Source/WebCore/rendering/svg/SVGContainerLayout.cpp:
(WebCore::SVGContainerLayout::layoutDifferentRootIfNeeded):
* Source/WebCore/rendering/svg/SVGRenderSupport.cpp:
(WebCore::SVGRenderSupport::layoutDifferentRootIfNeeded):
* Source/WebCore/rendering/svg/SVGResources.cpp:
(WebCore::SVGResources::layoutReferencedRootIfNeeded): Renamed from layoutDifferentRootIfNeeded.
* Source/WebCore/rendering/svg/SVGResources.h:

Canonical link: https://commits.webkit.org/265249@main